added new test in users module

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,45 +8,114 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">11,236</td><td></td><td></td></tr>
+<tr><th colspan="8">parellel</th></tr>
+<tr><td><a href="#t0">Users Tests</a></td><td class="num">19</td><td class="num">0</td><td class="num">0</td><td class="num attn">6</td><td class="num">1,550,588</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.UsersTest</td><td><a href="#m0">verifyUsersModuleFooterSection</a></td><td rowspan="1">1742839115333</td><td rowspan="1">137</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">parellel</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Users Tests &#8212; failed</th></tr><tr class="failedeven"><td rowspan="6">test.UsersTest</td><td><a href="#m0">verifyAddUserUsingLeadingAndTrailingSpaces</a></td><td rowspan="1">1742933247540</td><td rowspan="1">3072</td></tr><tr class="failedeven"><td><a href="#m1">verifyAddUserWithExistingEmail</a></td><td rowspan="1">1742932160040</td><td rowspan="1">3024</td></tr><tr class="failedeven"><td><a href="#m2">verifyAddUserWithValidData</a></td><td rowspan="1">1742932218224</td><td rowspan="1">2908</td></tr><tr class="failedeven"><td><a href="#m3">verifyMandatoryFieldValidationForUpdatePassword</a></td><td rowspan="1">1742932810865</td><td rowspan="1">429282</td></tr><tr class="failedeven"><td><a href="#m4">verifySavedUserDetailsInEditWindow</a></td><td rowspan="1">1742933265728</td><td rowspan="1">12549</td></tr><tr class="failedeven"><td><a href="#m5">verifyUsersModuleDetails</a></td><td rowspan="1">1742932771990</td><td rowspan="1">439</td></tr><tr><th colspan="4">Users Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="19">test.UsersTest</td><td><a href="#m6">verifyAddUserFormFieldPlaceholders</a></td><td rowspan="1">1742932142981</td><td rowspan="1">1581</td></tr><tr class="passedeven"><td><a href="#m7">verifyAddUserWithEmptySpacesInFields</a></td><td rowspan="1">1742932151084</td><td rowspan="1">2628</td></tr><tr class="passedeven"><td><a href="#m8">verifyAddUserWithExistingUserName</a></td><td rowspan="1">1742932169404</td><td rowspan="1">3357</td></tr><tr class="passedeven"><td><a href="#m9">verifyAddUserWithInvalidEmailFormat</a></td><td rowspan="1">1742932181509</td><td rowspan="1">2620</td></tr><tr class="passedeven"><td><a href="#m10">verifyAddUserWithInvalidPhoneNumber</a></td><td rowspan="1">1742932190617</td><td rowspan="1">2833</td></tr><tr class="passedeven"><td><a href="#m11">verifyAddUserWithLongUserName</a></td><td rowspan="1">1742932199687</td><td rowspan="1">2896</td></tr><tr class="passedeven"><td><a href="#m12">verifyAddUserWithMismatchedPassword</a></td><td rowspan="1">1742932208804</td><td rowspan="1">2784</td></tr><tr class="passedeven"><td><a href="#m13">verifyCloseAddUserUsingCloseButtonWithEnterDeatils</a></td><td rowspan="1">1742932227577</td><td rowspan="1">12540</td></tr><tr class="passedeven"><td><a href="#m14">verifyCloseAddUserUsingCloseIconWithEnterDeatils</a></td><td rowspan="1">1742932247002</td><td rowspan="1">12606</td></tr><tr class="passedeven"><td><a href="#m15">verifyCloseAddUserWithoutEnteringDetailsUsingCloseButton</a></td><td rowspan="1">1742932266484</td><td rowspan="1">10968</td></tr><tr class="passedeven"><td><a href="#m16">verifyCloseAddUserWithoutEnteringDetailsUsingCloseIcon</a></td><td rowspan="1">1742932283660</td><td rowspan="1">11029</td></tr><tr class="passedeven"><td><a href="#m17">verifyDeleteUser</a></td><td rowspan="1">1742932301004</td><td rowspan="1">440992</td></tr><tr class="passedeven"><td><a href="#m18">verifyFieldLabelAndAsteriskSymbolForMandatoryFieldsInAddUserPage</a></td><td rowspan="1">1742932750082</td><td rowspan="1">1908</td></tr><tr class="passedeven"><td><a href="#m19">verifyMandatoryFieldAlertsInAddUser</a></td><td rowspan="1">1742932799030</td><td rowspan="1">2876</td></tr><tr class="passedeven"><td><a href="#m20">verifyNavigationToAddUserPage</a></td><td rowspan="1">1742932761466</td><td rowspan="1">1604</td></tr><tr class="passedeven"><td><a href="#m21">verifyNavigationToUsersModule</a></td><td rowspan="1">1742932790158</td><td rowspan="1">1016</td></tr><tr class="passedeven"><td><a href="#m22">verifySearchUser</a></td><td rowspan="1">1742933257518</td><td rowspan="1">1007</td></tr><tr class="passedeven"><td><a href="#m23">verifyUserInUsersModuleGridWithPagination</a></td><td rowspan="1">1742933285384</td><td rowspan="1">400941</td></tr><tr class="passedeven"><td><a href="#m24">verifyUsersModuleFooterSection</a></td><td rowspan="1">1742932781710</td><td rowspan="1">60</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">test.UsersTest#verifyUsersModuleFooterSection</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [© 2025, Eseal.ioo] but found [© 2025, Eseal.io]
-	at org.testng.Assert.fail(Assert.java:111)
-	at org.testng.Assert.failNotEquals(Assert.java:1578)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:150)
-	at org.testng.Assert.assertEquals(Assert.java:132)
-	at org.testng.Assert.assertEquals(Assert.java:656)
-	at org.testng.Assert.assertEquals(Assert.java:666)
-	at test.UsersTest.verifyUsersModuleFooterSection(UsersTest.java:78)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:686)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:992)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
+<h2>Users Tests</h2><h3 id="m0">test.UsersTest#verifyAddUserUsingLeadingAndTrailingSpaces</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [atbs] but found [  atbs  ]
+	at test.UsersTest.verifyAddUserUsingLeadingAndTrailingSpaces(UsersTest.java:440)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:739)
-	at org.testng.TestRunner.run(TestRunner.java:614)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.UsersTest#verifyAddUserWithExistingEmail</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Email is already exists] but found [User name is already exists]
+	at test.UsersTest.verifyAddUserWithExistingEmail(UsersTest.java:218)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 21 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.UsersTest#verifyAddUserWithValidData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Successfully submitted!] but found [User name is already exists]
+	at test.UsersTest.verifyAddUserWithValidData(UsersTest.java:176)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 21 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.UsersTest#verifyMandatoryFieldValidationForUpdatePassword</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[text()=&apos;Save&apos;]&quot;}
+  (Session info: chrome=134.0.6998.118)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.28.1&apos;, revision: &apos;73f5ad48a2&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.2&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [aa0fea0e82573fda7d44a8f125ceea73, findElement {using=xpath, value=//*[text()=&apos;Save&apos;]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 134.0.6998.118, chrome: {chromedriverVersion: 134.0.6998.165 (fd886e2cb29..., userDataDir: C:\Users\dusan\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50461}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50461/devtoo..., se:cdpVersion: 134.0.6998.118, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: aa0fea0e82573fda7d44a8f125ceea73
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
+	at jdk.proxy2/jdk.proxy2.$Proxy28.isDisplayed(Unknown Source)
+	at utils.ElementUtilities.isElementDisplayedOnPage(ElementUtilities.java:169)
+	at utils.ElementUtilities.clickOnElement(ElementUtilities.java:128)
+	at pages.UsersPage.clickOnSaveButton(UsersPage.java:276)
+	at test.UsersTest.verifyMandatoryFieldValidationForUpdatePassword(UsersTest.java:408)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.UsersTest#verifySavedUserDetailsInEditWindow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [atbs] but found [A B Traders],
+	expected [dasfd] but found [Plant],
+	expected [1234567890] but found [9948021022],
+	expected [abc@yomail.com] but found [Kolkota@plant.com],
+	expected [userss] but found [100013],
+	expected [Plant] but found [null],
+	expected [VCPL - Panthnagar] but found [null],
+	expected [None] but found [null],
+	expected [Testing role] but found [null]
+	at test.UsersTest.verifySavedUserDetailsInEditWindow(UsersTest.java:484)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.UsersTest#verifyUsersModuleDetails</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	Users Page URL is mismatched expected [https://vguard-bt-stg.esealcom.com/null] but found [https://vguard-bt-stg.esealcom.com/admin/authorization/users],
+	Users Page Heading mismatchd expected [null] but found [User Management]
+	at test.UsersTest.verifyUsersModuleDetails(UsersTest.java:69)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
+	at java.base/java.lang.Thread.run(Thread.java:1583)
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">test.UsersTest#verifyAddUserFormFieldPlaceholders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">test.UsersTest#verifyAddUserWithEmptySpacesInFields</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">test.UsersTest#verifyAddUserWithExistingUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">test.UsersTest#verifyAddUserWithInvalidEmailFormat</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">test.UsersTest#verifyAddUserWithInvalidPhoneNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">test.UsersTest#verifyAddUserWithLongUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">test.UsersTest#verifyAddUserWithMismatchedPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">test.UsersTest#verifyCloseAddUserUsingCloseButtonWithEnterDeatils</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">test.UsersTest#verifyCloseAddUserUsingCloseIconWithEnterDeatils</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">test.UsersTest#verifyCloseAddUserWithoutEnteringDetailsUsingCloseButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">test.UsersTest#verifyCloseAddUserWithoutEnteringDetailsUsingCloseIcon</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">test.UsersTest#verifyDeleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m18">test.UsersTest#verifyFieldLabelAndAsteriskSymbolForMandatoryFieldsInAddUserPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m19">test.UsersTest#verifyMandatoryFieldAlertsInAddUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m20">test.UsersTest#verifyNavigationToAddUserPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m21">test.UsersTest#verifyNavigationToUsersModule</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m22">test.UsersTest#verifySearchUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m23">test.UsersTest#verifyUserInUsersModuleGridWithPagination</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m24">test.UsersTest#verifyUsersModuleFooterSection</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
