--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dusan\AppData\Local\Temp\testng-eclipse-188679677\testng-customsuite.xml</span>
+                    <span>C:\Users\dusan\AppData\Local\Temp\testng-eclipse--1494283963\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.UsersTest" class="method navigator-link" hash-for-method="verifyPaginationControlsPresence">verifyPaginationControlsPresence</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test.TransactionsTest" class="method navigator-link" hash-for-method="verifyEditTrasaction">verifyEditTrasaction</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.UsersTest</span>
+              <span class="class-name">test.TransactionsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyPaginationControlsPresence">
-                  </a> <!-- verifyPaginationControlsPresence -->
-                  <span class="method-name">verifyPaginationControlsPresence</span>
+                  <a name="verifyEditTrasaction">
+                  </a> <!-- verifyEditTrasaction -->
+                  <span class="method-name">verifyEditTrasaction</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dusan\AppData\Local\Temp\testng-eclipse-188679677\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dusan\AppData\Local\Temp\testng-eclipse--1494283963\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.UsersTest&quot;&gt;
+      &lt;class name=&quot;test.TransactionsTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyPaginationControlsPresence&quot;/&gt;
+          &lt;include name=&quot;verifyEditTrasaction&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- test.UsersTest --&gt;
+      &lt;/class&gt; &lt;!-- test.TransactionsTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyPaginationControlsPresence')
-data.setCell(0, 2, 'test.UsersTest')
-data.setCell(0, 3, 389);
+data.setCell(0, 1, 'verifyEditTrasaction')
+data.setCell(0, 2, 'test.TransactionsTest')
+data.setCell(0, 3, 5302);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 389 ms</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,61 +213,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">25 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">test.UsersTest</span>
+              <span class="ignored-class-name">test.TransactionsTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyAddUserWithValidData</span>
+                <span class="ignored-method-name">verifyMandatoryFieldValidationForAddUser</span>
                 <br/>
-                <span class="ignored-method-name">verifyDeleteUser</span>
+                <span class="ignored-method-name">verifyAddTransactionWithValidData</span>
                 <br/>
-                <span class="ignored-method-name">verifyAddUserWithExistingUserName</span>
+                <span class="ignored-method-name">verifySearchTrasaction</span>
                 <br/>
-                <span class="ignored-method-name">verifyCloseAddUserWithoutEnteringDetailsUsingCloseIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyUserInUsersModuleGridWithPagination</span>
-                <br/>
-                <span class="ignored-method-name">verifyCloseAddUserWithoutEnteringDetailsUsingCloseButton</span>
-                <br/>
-                <span class="ignored-method-name">verifyUsersModuleDetails</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithEmptySpacesInFields</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithLongUserName</span>
-                <br/>
-                <span class="ignored-method-name">verifyCloseAddUserUsingCloseIconWithEnterDeatils</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchUser</span>
-                <br/>
-                <span class="ignored-method-name">verifyFieldLabelAndAsteriskSymbolForMandatoryFieldsInAddUserPage</span>
-                <br/>
-                <span class="ignored-method-name">verifySavedUserDetailsInEditWindow</span>
-                <br/>
-                <span class="ignored-method-name">verifyMandatoryFieldValidationForUpdatePassword</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithInvalidEmailFormat</span>
-                <br/>
-                <span class="ignored-method-name">verifyUsersModuleFooterSection</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithMismatchedPassword</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserUsingLeadingAndTrailingSpaces</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithInvalidPhoneNumber</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserWithExistingEmail</span>
+                <span class="ignored-method-name">verifyDeleteTransaction</span>
                 <br/>
                 <span class="ignored-method-name">verifyNavigationToUsersModule</span>
-                <br/>
-                <span class="ignored-method-name">verifyNavigationToAddUserPage</span>
-                <br/>
-                <span class="ignored-method-name">verifyMandatoryFieldAlertsInAddUser</span>
-                <br/>
-                <span class="ignored-method-name">verifyAddUserFormFieldPlaceholders</span>
-                <br/>
-                <span class="ignored-method-name">verifyCloseAddUserUsingCloseButtonWithEnterDeatils</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -279,18 +239,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.UsersTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.TransactionsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyPaginationControlsPresence</span>
-                <span class="method-start">13224 ms</span>
+                <span class="method-name">verifyEditTrasaction</span>
+                <span class="method-start">7869 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13613 ms</span>
+                <span class="method-start">13180 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
